--- a/gary2.0/index.html
+++ b/gary2.0/index.html
@@ -39,5 +39,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/src/pages/gary-caps.js"></script>
+    <script src="/src/pages/MobileInit.js"></script>
   </body>
 </html>
