Fix build errors: add missing comma in picksService.js and type=module attribute for gary-caps.js

--- a/gary2.0/index.html
+++ b/gary2.0/index.html
@@ -104,7 +104,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/src/pages/gary-caps.js"></script>
+    <script type="module" src="/src/pages/gary-caps.js"></script>
     <script src="/assets/js/MobileInit.js"></script>
   </body>
 </html>
