--- a/gary2.0/index.html
+++ b/gary2.0/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@500;700&display=swap" rel="stylesheet" />
     <title>Gary A.I. - Sports Handicapping & Betting Picks</title>
 
     <style>
