--- a/gary2.0/index.html
+++ b/gary2.0/index.html
@@ -42,6 +42,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- Vercel Analytics script - loaded directly for better compatibility -->
-    <script async src="/_vercel/insights/script.js"></script>
+    <script type="module" async src="/_vercel/insights/script.js"></script>
   </body>
 </html>
