Remove Vercel analytics script from index.html to fix build error

--- a/gary2.0/index.html
+++ b/gary2.0/index.html
@@ -41,7 +41,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- Vercel Analytics script - loaded directly for better compatibility -->
-    <script type="module" async src="/_vercel/insights/script.js"></script>
+    <!-- Vercel Analytics is automatically injected by Vercel at runtime -->
   </body>
 </html>
